--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,7 @@ h1{
 
 span.navbutton{
 width: 100px;
-left: 30px;
+left: 27px;
 }
 
 #homebutton{
@@ -110,85 +110,12 @@ left: 30px;
     z-index: 2;
 }
 
-#cat {
-    position: absolute;
-    left: 400px;
-    top:331px;
-}
-
-#long-doors {
-    right:251px;
-    bottom:373px;
-}
-
-#bdoors {
-    left: 208px;
-    top:187px;
-}
-
-#a-cross {
-    right: 150px;
-    top:193px;
-}
-
-#ct-a {
-    right:250px;
-    top:185px;
-}
-
-#b-window {
-    left: 208px;
-    top:97px;
-}
-
-#bplat {
-    left: 92px;
-    top:130px;
-}
-
-#cta-longcorner {
-    right: 135px;
-    bottom:455px;
-}
-
-#node9 {
-    left: 279px;
-    bottom:349px;
-}
-
-#mid2b {
-    left: 400px;
-    top:195px;
-}
-
-#middoors {
-    left: 395px;
-    top:290px;
-}
-
-#middoors2 {
-    left: 375px;
-    top:292px;
-}
-
-
-#cta-long1way {
-    right: 150px;
-    top:240px;
-}
-
-#goose{
-right:170px;
-top:75px;
-}
-
-#palm{
-    left: 400px;
-    bottom:331px;
-}
-
 .node img {
     display: block;
     width: 20px; 
     height: 20px; 
+}
+.node img:hover{
+    width: 21px;
+    height: 21px;
 }
