--- a/src/vertigo.css
+++ b/src/vertigo.css
@@ -8,6 +8,15 @@
     left: 194px;
 }
 
+#videoFrame{
+    position: absolute;
+    right: 70px;
+    border: 3px solid black;
+    height: 889px;
+    width: 500px;
+    overflow:hidden;
+}
+
 #quad {
     top: 68px;
     left: 56px;
