--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,3 @@
-/* app.css */
-
 html, body {
     height: 100%;
     margin: 0;
@@ -9,7 +7,6 @@ html, body {
 }
 
 .navbutton {
-    
     max-height: 80px;
     background-color: white;
     border: 4px solid black; /* Border color and width */
@@ -26,14 +23,25 @@ html, body {
 h1{
     text-align: center;
 }
+
+#closerVideo{
+    position:absolute;
+    left: -6%;
+    top: -8%;
+    font-weight: 700;
+    font-family:sans-serif;
+    color: #000000;
+    font-size: 32px;
+}
+
 #testing{
     position: absolute;
     right: 400px;
 }
 
 span.navbutton{
-width: 100px;
-left: 27px;
+    width: 100px;
+    left: 27px;
 }
 
 #homebutton{
@@ -77,7 +85,8 @@ left: 27px;
 .navbar{
     z-index: 3;
     width: 200px;
-    height: 100%;
+    min-height: 1000px;
+    height: 100vh;
     display: inline-block;
     background-color: #747474;
     position: absolute;
@@ -91,10 +100,11 @@ left: 27px;
     position: absolute;
     width: 850px;
     height: 850px;
-    left: 300px;
+    left: 16%;
     box-shadow: 1px 1px 6px;
     border-radius: 10px;
     filter: blur(.2px);
+    background-color: white;
 }
 
 .title{
@@ -106,7 +116,6 @@ left: 27px;
     top: -85px;
     filter: blur(.2px);
     border-radius:10px;
-
     left: 350px;
     font-size: x-large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -127,9 +136,11 @@ left: 27px;
 .node img {
     display: block;
     width: 20px; 
+    justify-content: center;
     height: 20px; 
 }
 .node img:hover{
     width: 21px;
     height: 21px;
+    justify-content: center;
 }
