--- a/src/vertigo.css
+++ b/src/vertigo.css
@@ -9,9 +9,10 @@
 }
 
 #videoFrame{
+    box-sizing: border-box;
     position: absolute;
     right: 90px;
-    border: 3px solid black;
+    border: 0px solid black;
     height: 84.5vh;
     width: 47.52vh;
 }
