--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,9 @@ html, body {
     align-items: center;
 background-color: #2e2e2e;}
 
+h1{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .navbutton {
     background-color: white;
     border: 4px solid black;
@@ -28,6 +31,7 @@ background-color: #2e2e2e;}
     height: 84vh;
     width: 47.52vh;
     bottom: 80px;
+    box-shadow: 0px 0px 0px;
 }
 
 #iFrameID{
@@ -109,7 +113,7 @@ span.navbutton{
     min-height: 1000px;
     height: 100vh;
     display: inline-block;
-    background-color: #747474;
+    background-color: #646464;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -117,12 +121,12 @@ span.navbutton{
 }
 
 .map-container {
-    border: 3px solid rgb(145, 145, 145) ;
+    border: 3px solid rgb(73, 73, 73) ;
     position: absolute;
     width: 850px;
     height: 850px;
     left: 16%;
-    box-shadow: 1px 1px 6px;
+    box-shadow: 1px 1px 20px 3px;
     border-radius: 10px;
     filter: blur(.2px);
     background-color: white;
@@ -143,7 +147,6 @@ span.navbutton{
     border-radius:10px;
     left: 350px;
     font-size: x-large;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .map {
