Finished implementing nuke, new bug with dust 2 xbox smoke.

--- a/src/nuke.css
+++ b/src/nuke.css
@@ -46,6 +46,10 @@
     top: 304px;
     left: 443px;
 }
+#heaven-ct{
+    top: 380px;
+    right: 274px;
+}
 #bigbox2{
     top: 325px;
     left: 460px;
@@ -58,6 +62,11 @@
     left: 420px;
     top: 366px;
 }
+#hut{
+    left: 446px;
+    bottom: 365px;
+}
+
 
 
 
