--- a/app.css
+++ b/app.css
@@ -111,12 +111,13 @@ span.navbutton {
     position: absolute;
     width: 850px;
     height: 850px;
-    left: 16%;
+    top: 13%;
+    left:16%;
     box-shadow: 1px 1px 20px 3px;
     border-radius: 10px;
     filter: blur(.2px);
     background-color: white;
-    align-items: center;
+    display: flex;
 }
 
 .title {
